Fix blink on mobile

--- a/src/scss/components/calculator.scss
+++ b/src/scss/components/calculator.scss
@@ -51,7 +51,7 @@
 
   50% {
     background-color: transparent;
-    color: inherit;
+    color: $color-ships-officer;
   }
 }
 
@@ -64,7 +64,7 @@
 
   50% {
     background-color: transparent;
-    color: inherit;
+    color: $color-ships-officer;
   }
 }
 
